# dude

./: pyproject.toml  runtests.py
doc/: conf.py
dude/: __init__.py  args.py  clean.py  cli.py  cmdline.py  core.py  dimensions.py  execute.py  filter.py  info.py  summaries.py  summary.py  summary_backends.py  utils.py  visit.py
test/: __init__.py  test_core.py  test_execute.py  test_fork_return.py  test_utils.py
test/summaries/: test.py
