[project]
name = "dude"
version = "3.1.0"
authors = [
  { name="", email="" },
]
description = ""
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/db7/dude"
Issues = "https://github.com/db7/dude/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "dude/",
]

[project.scripts]
dude = "dude.cli:main"

[tool.black]
line-length = 100
target-version = ['py310']

